--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/bearer": "^0.7.0",
+    "@elysiajs/swagger": "^0.7.3",
+    "@elysiajs/trpc": "^0.7.0",
+    "@elysiajs/websocket": "^0.2.8",
+    "@trpc/server": "^10.38.5",
     "elysia": "latest"
   },
   "devDependencies": {
